# knowledge

./: .gitignore  AGENTS.md  Makefile  NOTICE  README.md  justfile  llms.txt  pyproject.toml
.github/: zizmor.yml
.github/workflows/: corpus-build.yml  publish.yml  validate.yml  zizmor.yml
corpora/9.0.0-k1/: source-manifest.yaml
corpora/9.0.0-k1/compatibility/: opentrons-ai-v1-v9.0.0.yaml  opentrons-docs-v9.0.0.yaml
corpora/9.1.1-k1/: source-manifest.yaml
corpora/9.1.1-k1/compatibility/: opentrons-ai-v1-v9.1.1.yaml  opentrons-docs-v9.1.1.yaml
docs/: agent-usage.md  corpus-format.md  implementation-plan.md  product-architecture.md  release-process.md  source-analysis.md  versioning.md
schemas/: corpus-manifest.schema.json  document.schema.json  entity.schema.json  relationship.schema.json  section.schema.json  symbol.schema.json
scripts/: build_911_k1.sh
src/opentrons_knowledge/: __init__.py  __version__.py  errors.py
src/opentrons_knowledge/artifacts/: archive.py  package.py
src/opentrons_knowledge/builder/: pipeline.py
src/opentrons_knowledge/cli/: main.py
src/opentrons_knowledge/compatibility/: validate.py
src/opentrons_knowledge/consumer/: corpus.py
src/opentrons_knowledge/docs/: markdown.py
src/opentrons_knowledge/indexing/: embeddings.py  lexical.py
src/opentrons_knowledge/models/: __init__.py  enums.py  manifest.py  records.py
src/opentrons_knowledge/normalization/: __init__.py  ids.py  serialize.py
src/opentrons_knowledge/python_api/: ast_symbols.py
tests/unit/: test_ast_and_shared_data.py  test_compatibility.py  test_fixture_corpus.py  test_ids_and_docs.py  test_manifest.py  test_oras.py
(+11 files in other folders)
