[project]
name = "opentrons-knowledge"
version = "0.1.0"
description = "Builder for immutable, versioned Opentrons Knowledge Corpus artifacts"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Opentrons Labworks, Inc." }]
dependencies = [
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "pyyaml>=6.0",
  "typer>=0.15",
  "rich>=13.9",
  "zstandard>=0.23",
  "structlog>=24.4",
  "packaging>=24.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
  "mypy>=1.14",
  "types-PyYAML>=6.0",
]

[project.scripts]
opentrons-knowledge = "opentrons_knowledge.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/schemas",
  "/corpora",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/NOTICE",
  "/pyproject.toml",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/**" = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["opentrons_knowledge"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that may use a local Opentrons checkout",
  "external: tests that need network or registry access",
]

[tool.opentrons_knowledge]
builder_version = "0.1.0"
corpus_schema_version = 1
